--- a/Grupo oboticário/implememtando testes/package.json
+++ b/Grupo oboticário/implememtando testes/package.json
@@ -11,7 +11,8 @@
     "dev": "nodemon server.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watchAll",
-    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watchAll --coverage"
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watchAll --coverage",
+    "test:auth:service": "node --experimental-vm-modules node_modules/jest/bin/jest.js --testPathPattern=src/test/services/authService.test.js"
   },
   "keywords": [],
   "license": "ISC",
@@ -32,7 +33,7 @@
     "eslint": "8.16.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.26.0",
-    "jest": "28.1.2",
+    "jest": "^28.1.2",
     "nodemon": "2.0.16",
     "supertest": "6.2.4"
   }
